[project]
name = "lfx-arxiv"
version = "0.1.1"
description = "arXiv search component as a standalone Langflow Extension Bundle."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Langflow", email = "contact@langflow.org" },
]
keywords = ["langflow", "lfx", "extension", "bundle", "arxiv", "search"]

# Runtime deps: lfx (the BUNDLE_API surface) plus defusedxml for safe XML
# parsing (the arxiv API returns Atom).  defusedxml is already an lfx dep
# but we list it here as a direct runtime dep so the bundle keeps building
# even if lfx drops it later.
dependencies = [
    "lfx>=1.10.0.dev0,<2.0.0",
    "defusedxml>=0.7.1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org/extensions"
Repository = "https://github.com/langflow-ai/langflow"

# Manifest-shipping distributions are discovered via the
# ``langflow.extensions`` entry-point.  The value is the dotted path to
# the package containing ``extension.json`` -- the loader walks
# ``importlib.metadata.files()`` from there to find the manifest, and
# falls back to this entry-point for editable installs whose dist.files
# only surfaces dist-info entries.
[project.entry-points."langflow.extensions"]
lfx-arxiv = "lfx_arxiv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# extension.json + components live inside the lfx_arxiv package so
# ``importlib.metadata.files(dist)`` finds them and the loader resolves
# bundles[].path relative to the manifest's directory.
packages = ["src/lfx_arxiv"]
include = ["src/lfx_arxiv/extension.json", "src/lfx_arxiv/components/**/*.py"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lfx_arxiv",
    "extension.json",
    "README.md",
    "pyproject.toml",
]
