[project]
name = "lfx-azure-ai-foundry"
version = "0.1.0"
description = "Azure AI Foundry as a first-class Langflow model provider, packaged as a standalone Extension Bundle."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Langflow", email = "contact@langflow.org" },
]
keywords = ["langflow", "lfx", "extension", "bundle", "azure", "azure-ai-foundry", "model-provider"]

dependencies = [
    "lfx>=1.11.0.dev0,<2.0.0",
    "langchain-azure-ai>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org/extensions"
Repository = "https://github.com/langflow-ai/langflow"

[project.entry-points."langflow.extensions"]
lfx-azure-ai-foundry = "lfx_azure_ai_foundry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfx_azure_ai_foundry"]
include = ["src/lfx_azure_ai_foundry/extension.json", "src/lfx_azure_ai_foundry/*.py"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lfx_azure_ai_foundry",
    "README.md",
    "pyproject.toml",
]
