[project]
name = "lfx-azure"
version = "0.1.0"
description = "Azure model components as a standalone Langflow Extension Bundle."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Langflow", email = "contact@langflow.org" },
]
keywords = ["langflow", "lfx", "extension", "bundle", "azure", "azure-ai-foundry", "azure-openai"]

# Runtime deps cover both the dedicated Azure OpenAI components and the
# unified Azure AI Foundry provider exposed by Langflow's Language Model
# component. Keeping them here makes the default Langflow install complete
# without restoring the opt-in lfx-bundles metapackage.
dependencies = [
    "lfx>=1.12.0.dev0,<2.0.0",
    "langchain-openai>=1.1.6",
    "langchain-azure-ai>=1.1.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org/extensions"
Repository = "https://github.com/langflow-ai/langflow"

[project.entry-points."langflow.extensions"]
lfx-azure = "lfx_azure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfx_azure"]
include = [
    "src/lfx_azure/extension.json",
    "src/lfx_azure/components/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/lfx_azure",
    "extension.json",
    "README.md",
    "pyproject.toml",
]
