[project]
name = "lfx-crewai"
version = "0.1.0"
description = "Crewai component(s) as a standalone Langflow Extension Bundle."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Langflow", email = "contact@langflow.org" },
]
keywords = ["langflow", "lfx", "extension", "bundle", "crewai"]

# Runtime deps: lfx (the BUNDLE_API surface) plus any third-party imports
# the bundle's components rely on.  REVIEW THIS LIST -- the script ports
# only ``lfx``; add any other deps the moved component(s) import.
dependencies = [
    "lfx>=1.10.0,<2.0.0",
    # crewai is intentionally NOT pinned here because the workspace's
    # ``langflow-base[ag2]`` extra pulls in ag2 which transitively pulls
    # crewai at a different version (httpx conflict).  Pre-extraction
    # the crewai extra was commented out in ``langflow-base`` for the
    # same reason.  Users who install ``lfx-crewai`` standalone get
    # crewai resolved via crewai's own setup; users inside the workspace
    # rely on the transitive pull-in.  This mirrors the pre-extraction
    # state: crewai components were in-tree but the dep was not in
    # langflow-base[complete].
]

[project.urls]
Homepage = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org/extensions"
Repository = "https://github.com/langflow-ai/langflow"

# Manifest-shipping distributions are discovered via the
# ``langflow.extensions`` entry-point.  Editable installs whose
# ``dist.files`` only surfaces dist-info entries fall back to this
# entry-point to find the manifest.
[project.entry-points."langflow.extensions"]
lfx-crewai = "lfx_crewai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# extension.json + components live inside the lfx_crewai package so
# ``importlib.metadata.files(dist)`` finds them and the loader resolves
# bundles[].path relative to the manifest's directory.
packages = ["src/lfx_crewai"]
include = [
    "src/lfx_crewai/extension.json",
    "src/lfx_crewai/components/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/lfx_crewai",
    "extension.json",
    "README.md",
    "pyproject.toml",
]
