[project]
name = "lfx-cuga"
version = "0.1.0"
description = "Cuga component(s) as a standalone Langflow Extension Bundle."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Langflow", email = "contact@langflow.org" },
]
keywords = ["langflow", "lfx", "extension", "bundle", "cuga"]

# Runtime deps: lfx (the BUNDLE_API surface) plus any third-party imports
# the bundle's components rely on.  REVIEW THIS LIST -- the script ports
# only ``lfx``; add any other deps the moved component(s) import.
dependencies = [
    "lfx>=1.10.0,<2.0.0",
    "cuga>=0.2.20,<0.3.0; sys_platform != 'darwin' and python_version < '3.14'",
    "cuga>=0.2.20,<0.3.0; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.14'",
    "langchain-core>=1.3.3,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org/extensions"
Repository = "https://github.com/langflow-ai/langflow"

# Manifest-shipping distributions are discovered via the
# ``langflow.extensions`` entry-point.  Editable installs whose
# ``dist.files`` only surfaces dist-info entries fall back to this
# entry-point to find the manifest.
[project.entry-points."langflow.extensions"]
lfx-cuga = "lfx_cuga"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# extension.json + components live inside the lfx_cuga package so
# ``importlib.metadata.files(dist)`` finds them and the loader resolves
# bundles[].path relative to the manifest's directory.
packages = ["src/lfx_cuga"]
include = [
    "src/lfx_cuga/extension.json",
    "src/lfx_cuga/components/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/lfx_cuga",
    "extension.json",
    "README.md",
    "pyproject.toml",
]
